# Projekt14_SO

./: CMakeLists.txt  log.txt
include/: Shared_memory.h  Tables.h  sem_ops.h  zamowienie.h
src/: Tables.cpp  generator_klientow.cpp  kierownik.cpp  klient.cpp  main.cpp  pracownik.cpp  sem_ops.cpp
